--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,14 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/de.jflex/cup_runtime -->
+    <dependency>
+      <groupId>de.jflex</groupId>
+      <artifactId>cup_runtime</artifactId>
+      <version>11b-20160615</version>
+    </dependency>
+
   </dependencies>
 
   <build>
